<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="title_today">Today</string>
    <string name="title_hourly">Hourly</string>
    <string name="title_daily">Daily</string>
    <string name="title_news">News</string>
    <string name="title_location">Location</string>
    <string name="title_real_feel">Real Feel</string>
    <string name="title_wind">Wind</string>
    <string name="title_wind_degree">Wind Degree</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_pressure">Pressure</string>
    <string name="title_cloud">Cloud</string>
    <string name="title_visibility">Visibility</string>
    <string name="title_history">History</string>
    <string name="title_description">Cloudy</string>
    <string name="title_weather_detail">Weather Detail</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_celsius">°C</string>
    <string name="title_detail">Detail</string>
    <string name="title_see_more">See More</string>
    <string name="title_wind_gust">Wind Gust</string>
    <string name="title_notification">Notification</string>
    <string name="title_language">Language</string>
    <string name="title_about">About</string>
    <string name="title_setting">Setting</string>
    <string name="title_uv">UV</string>
    <string name="title_activity_air_quality">AirQualityActivity</string>
    <string name="title_air_quality">Air Quality</string>
    <string name="title_favorite_cities">Favorite Cities</string>
    <string name="title_good">Good</string>
    <string name="title_bad">Bad</string>
    <string name="title_harmful">Harmful</string>
    <string name="title_very_harmful">Very Harmful</string>
    <string name="title_dangerous">Dangerous</string>
    <string name="title_CO2">CO2</string>
    <string name="title_SO2">SO2</string>
    <string name="title_NO2">NO2</string>
    <string name="title_recent">Recent</string>
    <string name="title_air_quality_range">Air Quality Range</string>
    <string name="title_wonderful">Wonderful</string>
    <string name="title_allow">Allow</string>
    <string name="title_search">Search</string>
    <string name="title_hourly_forecast">Hourly Forecast</string>
    <string name="title_map">Map</string>
    <string name="text_unknown_place">Unknown Place</string>
    <string name="text_bad_air_quality_description">The air has reached a high level of pollution that is not suitable for sensitive groups. Please limit out</string>
    <string name="text_wonderful_air_range">0 - 19</string>
    <string name="text_wonderful_air_description">Air quality is ideal for most subjects. Enjoy normal outdoor activities</string>
    <string name="text_good_air_description">Air quality is acceptable for most subjects but not suitable for some sensitive subjects.</string>
    <string name="text_bad_air_description">The air has a high level of pollution and is not suitable for the sensitive group. Reduce the time spent outside if the body develops respiratory symptoms.</string>
    <string name="text_harmful_air_description">
        Sensitive groups will experience immediate health effects. Healthy subjects may experience shortness of breath, itchy neck.</string>
    <string name="text_very_harmful_air_description">
        Sensitive groups will feel the impact immediately and should avoid outdoor activities. Healthy subjects may experience difficulty and itchy neck, consider staying at home to avoid activities outside</string>
    <string name="text_dangerous_air_description"> Any exposure to the air for even a few minutes can have serious health effects. Avoid outdoor activities</string>
    <string name="text_good_air_range">20 - 49</string>
    <string name="text_bad_air_range">50 - 99</string>
    <string name="text_harmful_air_range">100 - 149</string>
    <string name="text_very_harmful_air_range">150 - 249</string>
    <string name="text_dangerous_air_range">250+</string>
    <string name="text_test_lat">21.0203727</string>
    <string name="text_test_lon">105.7885139</string>
    <string name="text_km"> Km/h</string>
    <string name="text_error_not_type">Wrong type input</string>
    <string name="text_news_image_desc">News Image</string>
    <string name="text_language_image_desc">Language Image</string>
    <string name="text_language_vietnamese">Vietnam</string>
    <string name="text_language_english">English</string>
    <string name="text_image_description">Image Description</string>
    <string name="text_about_message">Develop Team: ddhuy4298-I_am_Lien</string>
    <string name="text_ok">OK</string>
    <string name="text_degree">°C</string>
    <string name="text_percent">%</string>
    <string name="text_wind_speed">km/h</string>
    <string name="text_wind_degree">°</string>
    <string name="text_pressure">mbar</string>
    <string name="text_test_desc">Cloudy</string>
    <string name="text_test_day_of_week">S</string>
    <string name="text_test">26</string>
    <string name="text_test_date">19/03</string>
    <string name="text_test_time">12:34</string>
    <string name="text_test_month">March</string>
    <string name="text_permission">Allow Permission to get Weather Forecast</string>
    <string name="text_warning_location">Can not get location</string>
    <string name="text_notification_title">Today Weather</string>
    <string name="text_notification_temp_separate"> - </string>
    <string name="text_fill_city_name"> Please Fill City Name </string>
    <string name="text_cannot_find_city_name"> Can not Find City </string>
    <string name="text_add_to_favorite"> Added To Favorite </string>
    <string name="text_delete_favorite"> Deleted Favorite City </string>
    <string name="text_delete_fail"> Delete Fail </string>
</resources>
