<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textAirQualityRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_air_quality_range"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewWonderfulAir"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/chartreuse"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAirQualityRange" />

    <TextView
        android:id="@+id/textWonderfulAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_wonderful"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewWonderfulAir" />

    <TextView
        android:id="@+id/textWonderfulAirRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_wonderful_air_range"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBaseline_toBaselineOf="@+id/textWonderfulAir"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textWonderfulAirDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:text="@string/text_wonderful_air_description"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textWonderfulAir" />

    <View
        android:id="@+id/viewGoodAir"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/coral"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textWonderfulAirDescription" />

    <TextView
        android:id="@+id/textGoodAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_good"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewGoodAir" />

    <TextView
        android:id="@+id/textGoodAirRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_air_range"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBaseline_toBaselineOf="@+id/textGoodAir"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textGoodAirDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:text="@string/text_good_air_description"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textGoodAir" />

    <View
        android:id="@+id/viewBadAir"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/scarlet"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textGoodAirDescription" />

    <TextView
        android:id="@+id/textBadAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_bad"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBadAir" />

    <TextView
        android:id="@+id/textBadAirRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bad_air_range"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBaseline_toBaselineOf="@+id/textBadAir"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textBadAirDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:text="@string/text_bad_air_description"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textBadAir" />

    <View
        android:id="@+id/viewHarmfulAir"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/rose"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textBadAirDescription" />

    <TextView
        android:id="@+id/textHarmfulAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_harmful"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewHarmfulAir" />

    <TextView
        android:id="@+id/textHarmfulAirRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_harmful_air_range"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBaseline_toBaselineOf="@+id/textHarmfulAir"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textHarmfulAirDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:text="@string/text_harmful_air_description"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHarmfulAir" />

    <View
        android:id="@+id/viewVeryHarmfulAir"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/shocking_pink"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHarmfulAirDescription" />

    <TextView
        android:id="@+id/textVeryHarmfulAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_very_harmful"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewVeryHarmfulAir" />

    <TextView
        android:id="@+id/textVeryHarmfulAirRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_very_harmful_air_range"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBaseline_toBaselineOf="@+id/textVeryHarmfulAir"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textVeryHarmfulAirDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="start"
        android:text="@string/text_very_harmful_air_description"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textVeryHarmfulAir" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>
